# SC-Gen-5

./: .gitignore  CLAUDE.md  CLOUD_CONSULTATION.md  CONTRIBUTING.md  DESKTOP_LAUNCHER_README.md  Dockerfile  FRONTEND_CONSOLIDATION_COMPLETE.md  LAZY_LOADING_IMPLEMENTATION.md  LICENSE  NEXT_STEPS_COMPLETE.md  OPTIONAL_UTILITY_MODEL.md  RAG_SYSTEM_CLEANUP.md  README.md  SC_Gen5_Launcher.bat  SINGLE_LAUNCHER_README.md  SINGLE_LAUNCHER_SUMMARY.md  SOPHISTICATED_UI_README.md  START_HERE.sh  START_SC_GEN5  Stop_SC_Gen5.bat  WINDOWS_SETUP.md  app.py  authenticate_step_by_step.md  backend_monitor.py  check_api_status.py  check_gpu_setup.py  cleanup_old_scripts.sh  cleanup_system.sh  clear_cache.sh  complete_wsl_fix.ps1  complete_wsl_fix.sh  create_desktop_shortcut.py  create_scgen5_shortcut.py  create_shortcut.py  desktop_launcher.py  docker-compose.yml  env_aware_launcher.py  env_setup.md  fix_frontend.bat  fix_wsl_and_device_issues.sh  (+40 more)
.claude/: settings.local.json
data/: A1.5.pdf:Zone.Identifier  metadata.json  model_service_status.json  simple_rag_metadata.json
data/originals/: doc_91df26405d12f7aa_test_companies_act.txt
data/simple_vector_store/: chunk_ids.pkl  chunks.pkl  index.faiss
docs/: RAG_v2_upgrade.md
frontend/: package-lock.json  package.json  start_frontend_wsl.sh
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: rag.ts
frontend/src/components/: AskBar.tsx  ProgressTracker.tsx  StreamPane.tsx  SystemMonitor.tsx  UploadZone.tsx
frontend/src/components/Layout/: Sidebar.tsx  TopBar.tsx
frontend/src/pages/: AnalyticsPage.tsx  ClaudeCliNativePage.tsx  ClaudeCliPage.tsx  CloudConsultation.tsx  CompaniesHousePage.tsx  ConsultationPage-old.tsx  ConsultationPage.tsx  Dashboard.tsx  DiagnosticsPage.tsx  DocumentsPage.tsx  LegalCitationPage.tsx  Research.tsx  TerminalPage.tsx
src/sc_gen5/: __init__.py
src/sc_gen5/api/: cloud_consultation.py  main.py
src/sc_gen5/core/: __init__.py  advanced_vector_store.py  cloud_llm.py  doc_store.py  enhanced_doc_store.py  legal_prompts.py  local_llm.py  local_protocol_enforcer.py  ocr.py  protocols.py  rag_pipeline.py  strategic_protocols.py  vector_store.py
src/sc_gen5/integrations/: __init__.py  companies_house.py  gemini_cli.py
src/sc_gen5/rag/: simple_rag.py  simple_router.py
src/sc_gen5/rag/v2/: callbacks.py  enhanced_retrievers.py  graphs.py  hardware.py  memory_optimized_models.py  model_client.py  model_service.py  models.py  models.py.backup  retrievers.py
src/sc_gen5/services/: __init__.py  ch_ingest_service.py  consult_service.py
src/sc_gen5/ui/: __init__.py  app.py
terminal-server/: package-lock.json  package.json  server.js
tests/: __init__.py  test_consult_api.py  test_doc_store.py  test_document_management.py  test_frontend_document_management.py  test_integration.py  test_rag_pipeline.py
